Map webRequest filter type to multiple internal ResourceTypes if needed

In the past, there was a 1-to-1 relation between content::ResourceType
and the public webRequest types. Since https://crbug.com/410382#c39
added multiple resource types that mapped to the same webRequest type,
this relation is no longer true (it's now a n-to-1 relation).

This change needs to be accounted for by registering multiple internal
filter types if a webRequest filter type is set that maps to more than
one content::ResourceType.

BUG=591988
TEST=browser_tests --gtest_filter=ExtensionWebRequestApiTest.WebRequestTypes

Review URL: https://codereview.chromium.org/1853283002

Cr-Commit-Position: refs/heads/master@{#385340}

Former-commit-id: 4bb2b298018be3f9edebe3009d9e7a92f04e06aa